tests/NormalTests/paczka1/fuzzy1/60001941.err
Error in line 9: 6Er5W A422 17,7
Error in line 6: La7a5 S573 21,7
Error in line 33: La7a5 S573 60,7
